tests/baselines/reference/derivedClassOverridesPrivateFunction1.errors.txt
tests/cases/compiler/derivedClassOverridesPrivateFunction1.ts(8,7): error TS2416: Class 'DerivedClass' incorrectly extends base class 'BaseClass':
  Types have separate declarations of a private property '_init'.


==== tests/cases/compiler/derivedClassOverridesPrivateFunction1.ts (1 errors) ====
    class BaseClass {
        constructor() {
            this._init();
        }
        private _init() {
        }
    }
    class DerivedClass extends BaseClass {
          ~~~~~~~~~~~~
!!! error TS2416: Class 'DerivedClass' incorrectly extends base class 'BaseClass':
!!! error TS2416:   Types have separate declarations of a private property '_init'.
        constructor() {
            super();
        }
        private _init() {
        }
    }
    new DerivedClass();